# city_3d_model

./: BuildingHandler.cpp  BuildingHandler.h  CMakeLists.txt  Makefile  Mesh.cpp  Mesh.h  README.md  TODO.txt  base_example.cpp  config.h  main.cpp  test.cpp  test_building.cpp
python_data_ingestion/: osm_to_csv.py
shaders/: red_color.fs  vertex.vs  vertex_camera.vs  vertex_camera_no_color.vs
src/: Building.cpp  Building.h  BuildingHandler.cpp  BuildingHandler.h  config.h  shader.cpp  shader.h
